fix(components): adjust spacing between text elements in media list
The text elements in the `media-list` component were too close and the
`p` tag had too much line height between the paragraphs making it look
disjointed.

--- a/components/media-item.less
+++ b/components/media-item.less
@@ -19,11 +19,12 @@
     }
 
     p {
-      margin: 0px;
+      margin: 0 0 5px;
+      line-height: 120%;
     }
 
     h5 {
-      margin: 0px;
+      margin: 0 0 5px;
     }
   }
 
